--- a/documentation/asciidoc/topics/proc_get_cluster_credentials.adoc
+++ b/documentation/asciidoc/topics/proc_get_cluster_credentials.adoc
@@ -11,10 +11,18 @@ If you do not specify credentials when you create clusters, the {ispn_operator} 
 .Procedure
 . List the pods for the cluster, for example:
 +
+ifndef::productized[]
 [source,options="nowrap",subs=attributes+]
 ----
 include::cmd_examples/oc_get_pods.adoc[]
 ----
+endif::productized[]
+ifdef::productized[]
+[source,options="nowrap",subs=attributes+]
+----
+include::cmd_examples/oc_get_rhdg_pods.adoc[]
+----
+endif::productized[]
 +
 . Get the secrets from one of the pods as `yaml` output, for example:
 +
@@ -29,7 +37,7 @@ endif::productized[]
 ifdef::productized[]
 [source,options="nowrap",subs=attributes+]
 ----
-$ oc get pod/example-infinispan-0 -o yaml
+$ oc get pod/datagrid-minimal-0 -o yaml
 
 include::yaml_examples/credentials_rhdg.yaml[]
 ----
