JDG-2998 adding details for auth secrets

--- a/documentation/asciidoc/stories/assembly_cluster_credentials.adoc
+++ b/documentation/asciidoc/stories/assembly_cluster_credentials.adoc
@@ -1,11 +1,10 @@
 [id='managing_cluster_credentials']
-== Managing Cluster Credentials
-:context: managing_cluster_credentials
+= Managing Cluster Credentials
+:context: cluster_auth
 
 Perform tasks to manage authentication for {brandname} clusters.
 
 .Prerequisites
-
 ifndef::productized[]
 * A `kubectl` client in your `$PATH`.
 endif::productized[]
@@ -13,9 +12,7 @@ ifdef::productized[]
 * An `oc` client in your `$PATH`.
 endif::productized[]
 
-[id='getting_credentials-{context}']
-=== Retrieving Cluster Credentials
-include::topics/proc_get_cluster_credentials.adoc[]
+include::topics/proc_get_cluster_credentials.adoc[leveloffset=+1]
 
 // Restore the parent context.
 ifdef::parent-context[:context: {parent-context}]
