--- a/documentation/asciidoc/stories/assembly_deploying_operator.adoc
+++ b/documentation/asciidoc/stories/assembly_deploying_operator.adoc
@@ -1,11 +1,10 @@
 [id='deploying_operator_manually']
-== Manually Deploying the {ispn_operator}
-:context: deploying_manually
+= Manually Deploying the {ispn_operator}
+:context: deploying_manual
 
 ifndef::productized[]
 You can manually deploy the {ispn_operator} as an alternative to installing it from link:https://www.operatorhub.io/[OperatorHub.io].
 endif::productized[]
-
 ifdef::productized[]
 Deploy the {ispn_operator} manually to your {k8s} environment.
 endif::productized[]
@@ -13,13 +12,8 @@ endif::productized[]
 .Prerequisites
 include::topics/ref_cluster_admin.adoc[]
 
-[id='installing_crd_rbac-{context}']
-=== Creating {ispn_operator} Resources
-include::topics/proc_install_crd_rbac.adoc[]
-
-[id='installing_operator-{context}']
-=== Deploying the {ispn_operator}
-include::topics/proc_deploy_operator.adoc[]
+include::topics/proc_install_crd_rbac.adoc[leveloffset=+1]
+include::topics/proc_deploy_operator.adoc[leveloffset=+1]
 
 // Restore the parent context.
 ifdef::parent-context[:context: {parent-context}]
