--- a/documentation/asciidoc/titles/stories.adoc
+++ b/documentation/asciidoc/titles/stories.adoc
@@ -2,6 +2,6 @@ include::topics/con_infinispan_operator.adoc[]
 ifdef::productized[]
 include::topics/ref_tech_preview.adoc[]
 endif::productized[]
-include::stories/manually_deploying_operator.adoc[]
-include::stories/spinning_up_clusters.adoc[]
-include::stories/managing_cluster_credentials.adoc[]
+include::stories/assembly_deploying_operator.adoc[leveloffset=+1]
+include::stories/assembly_creating_clusters.adoc[leveloffset=+1]
+include::stories/assembly_cluster_credentials.adoc[leveloffset=+1]
