--- a/documentation/asciidoc/topics/proc_get_cluster_credentials.adoc
+++ b/documentation/asciidoc/topics/proc_get_cluster_credentials.adoc
@@ -1,70 +1,33 @@
+[id='getting_credentials-{context}']
+= Retrieving Cluster Credentials
 You can retrieve credentials for your {brandname} clusters as base64-encoded strings from secrets in your cluster namespace.
 
-[NOTE]
-====
-If you do not specify credentials when you create clusters, the {ispn_operator} automatically generates passwords and sets default usernames as follows:
+If you do not create secrets and credentials when you create clusters, the {ispn_operator} automatically generates them with the following defaults:
 
+Default usernames::
++
 * Management user is `admin`.
 * Application user is `developer`.
-====
+
+Default credentials secrets::
++
+* `{example_crd_name}-mgmt-generated-secret` contains credentials for the management user.
+* `{example_crd_name}-app-generated-secret` contains credentials for the application user.
 
 .Procedure
-. List the pods for the cluster, for example:
-+
-ifndef::productized[]
-[source,options="nowrap",subs=attributes+]
-----
-include::cmd_examples/oc_get_pods.adoc[]
-----
-endif::productized[]
-ifdef::productized[]
-[source,options="nowrap",subs=attributes+]
-----
-include::cmd_examples/oc_get_rhdg_pods.adoc[]
-----
-endif::productized[]
-+
-. Get the secrets from one of the pods as `yaml` output, for example:
-+
-ifndef::productized[]
-[source,options="nowrap",subs=attributes+]
-----
-$ oc get pod/example-infinispan-0 -o yaml
-
-include::yaml_examples/credentials_ispn.yaml[]
-----
-endif::productized[]
-ifdef::productized[]
-[source,options="nowrap",subs=attributes+]
-----
-$ oc get pod/datagrid-minimal-0 -o yaml
-
-include::yaml_examples/credentials_rhdg.yaml[]
-----
-endif::productized[]
-+
-Credentials reside in the following secrets:
-+
-* `example-infinispan-mgmt-generated-secret` contains credentials for the management user.
-* `example-infinispan-app-generated-secret` contains credentials for the application user.
-+
-. Get the credentials from the secret. For example, to get the password for the application user:
+* Get the credentials from the secret. For example, to get the password for the application user from the default secret:
 +
 [source,options="nowrap",subs=attributes+]
 ----
-$ oc get secret example-infinispan-app-generated-secret -n my_namespace -o jsonpath="{.data.password}" | base64 --decode
+include::cmd_examples/oc_get_app_secret.adoc[]
 ----
 +
 [TIP]
 ====
 Use the `jp` JSON processor to retrieve credentials as follows:
 
+[source,options="nowrap",subs=attributes+]
 ----
-$ oc get secret example-infinispan-app-generated-secret -n my_namespace -o json | jq '.data | map_values(@base64d)'
-
-{
-  "password": "tUElqbfoJmT,NJVN",
-  "username": "developer"
-}
+include::cmd_examples/oc_get_app_secret_jp.adoc[]
 ----
 ====
