--- a/documentation/asciidoc/topics/cmd_examples/oc_get_pods_w.adoc
+++ b/documentation/asciidoc/topics/cmd_examples/oc_get_pods_w.adoc
@@ -1,10 +1,10 @@
 $ oc get pods -w
 
-NAME                                   READY     STATUS              RESTARTS   AGE
-example-infinispan-54c66fd755-28lvx    0/1       ContainerCreating   0          4s
-example-infinispan-54c66fd755-7c4zc    0/1       ContainerCreating   0          4s
-example-infinispan-54c66fd755-8gbxf    0/1       ContainerCreating   0          5s
-infinispan-operator-69d7d4469d-f62ws   1/1       Running             0          3m
-example-infinispan-54c66fd755-8gbxf    1/1       Running             0          8s
-example-infinispan-54c66fd755-7c4zc    1/1       Running             0          8s
-example-infinispan-54c66fd755-28lvx    1/1       Running             0          8s
+NAME                        READY  STATUS              RESTARTS   AGE
+{example_crd_name}-1               0/1    ContainerCreating   0          4s
+{example_crd_name}-2               0/1    ContainerCreating   0          4s
+{example_crd_name}-3               0/1    ContainerCreating   0          5s
+infinispan-operator-0        1/1    Running             0          3m
+{example_crd_name}-3               1/1    Running             0          8s
+{example_crd_name}-2               1/1    Running             0          8s
+{example_crd_name}-1               1/1    Running             0          8s
