JDG-3108 invalid example credentials in auth secret

--- a/documentation/asciidoc/topics/cmd_examples/cat_connect_secret.adoc
+++ b/documentation/asciidoc/topics/cmd_examples/cat_connect_secret.adoc
@@ -5,6 +5,6 @@ metadata:
   name: connect-secret
 type: Opaque
 stringData:
-  username: application_user
-  password: application_password
+  username: developer
+  password: changeme
 EOF
