Security refactoring documentation and example #122

--- a/documentation/asciidoc/topics/cmd_examples/cat_cr_auth.adoc
+++ b/documentation/asciidoc/topics/cmd_examples/cat_cr_auth.adoc
@@ -5,8 +5,6 @@ metadata:
   name: {example_crd_name}
 spec:
   replicas: 2
-  connector:
-    authentication:
-      type: Credentials
-      secretName: connect-secret
+  security:
+    endpointSecret: connect-secret
 EOF
