--- a/documentation/asciidoc/topics/cmd_examples/oc_get_app_secret.adoc
+++ b/documentation/asciidoc/topics/cmd_examples/oc_get_app_secret.adoc
@@ -1,2 +1,1 @@
-$ oc get secret {example_crd_name}-app-generated-secret \
--n my_namespace -o jsonpath="{.data.password}" | base64 --decode
+$ oc get secret {example_crd_name}-generated-secret -n my_namespace
