--- a/documentation/asciidoc/topics/cmd_examples/oc_get_app_secret_jp.adoc
+++ b/documentation/asciidoc/topics/cmd_examples/oc_get_app_secret_jp.adoc
@@ -1,7 +1,6 @@
-$ oc get secret {example_crd_name}-app-generated-secret \
--n my_namespace -o json | jq '.data | map_values(@base64d)'
+$ oc get secret {example_crd_name}-generated-secret \
+-n my_namespace -o jsonpath="{.data.identities\.yaml}" | base64 -D
 
-{
-  "password": "tUElqbfoJmT,NJVN",
-  "username": "developer"
-}
+credentials:
+- username: developer
+  password: dIRs5cAAsHIeeRIL
