--- a/documentation/asciidoc/topics/proc_get_cluster_credentials.adoc
+++ b/documentation/asciidoc/topics/proc_get_cluster_credentials.adoc
@@ -6,13 +6,11 @@ If you do not create secrets and credentials when you create clusters, the {ispn
 
 Default usernames::
 +
-* Management user is `admin`.
 * Application user is `developer`.
 
 Default credentials secrets::
 +
-* `{example_crd_name}-mgmt-generated-secret` contains credentials for the management user.
-* `{example_crd_name}-app-generated-secret` contains credentials for the application user.
+* `{example_crd_name}-generated-secret` contains credentials for the application user.
 
 .Procedure
 * Get the credentials from the secret. For example, to get the password for the application user from the default secret:
@@ -24,7 +22,7 @@ include::cmd_examples/oc_get_app_secret.adoc[]
 +
 [TIP]
 ====
-Use the `jp` JSON processor to retrieve credentials as follows:
+Retrieve credentials as follows:
 
 [source,options="nowrap",subs=attributes+]
 ----
