doc edits related to security config

--- a/documentation/asciidoc/topics/cmd_examples/oc_get_app_secret_jp.adoc
+++ b/documentation/asciidoc/topics/cmd_examples/oc_get_app_secret_jp.adoc
@@ -1,5 +1,5 @@
-$ oc get secret {example_crd_name}-generated-secret \
--n my_namespace -o jsonpath="{.data.identities\.yaml}" | base64 -D
+$ oc get secret {example_crd_name}-generated-secret -n my_namespace \
+-o jsonpath="{.data.identities\.yaml}" | base64 -D
 
 credentials:
 - username: developer
