--- a/documentation/asciidoc/topics/proc_get_cluster_credentials.adoc
+++ b/documentation/asciidoc/topics/proc_get_cluster_credentials.adoc
@@ -4,28 +4,20 @@ You can retrieve credentials for your {brandname} clusters as base64-encoded str
 
 If you do not create secrets and credentials when you create clusters, the {ispn_operator} automatically generates them with the following defaults:
 
-Default usernames::
-+
-* Application user is `developer`.
-
-Default credentials secrets::
-+
-* `{example_crd_name}-generated-secret` contains credentials for the application user.
+* `developer` is the default application.
+* `{example_crd_name}-generated-secret` is the default authentication secret.
 
 .Procedure
-* Get the credentials from the secret. For example, to get the password for the application user from the default secret:
+* Retrieve credentials from the authentication secret.
 +
 [source,options="nowrap",subs=attributes+]
 ----
 include::cmd_examples/oc_get_app_secret.adoc[]
 ----
 +
-[TIP]
-====
-Retrieve credentials as follows:
-
+To base64 decode credentials, do the following:
++
 [source,options="nowrap",subs=attributes+]
 ----
 include::cmd_examples/oc_get_app_secret_jp.adoc[]
 ----
-====
