--- a/documentation/asciidoc/topics/proc_verify_cluster.adoc
+++ b/documentation/asciidoc/topics/proc_verify_cluster.adoc
@@ -3,7 +3,7 @@
 Review log messages to verify that the {ispn_operator} has successfully created a {brandname} cluster.
 
 .Procedure
-ifndef::productized[]
+
 * Check that the {brandname} nodes have received a clustered view. Do either of the following:
 
 ** Retrieve the cluster view from the pod log files.
@@ -12,31 +12,7 @@ ifndef::productized[]
 ----
 include::cmd_examples/oc_logs_clusterview.adoc[]
 ----
-+
-** Retrieve the custom resource type for the {ispn_operator}.
-+
-[source,options="nowrap",subs=attributes+]
-----
-include::cmd_examples/oc_get_ispn_yaml.adoc[]
-----
-+
-The output of the preceding command contains the following message to indicate that the {brandname} nodes have received a clustered view:
-+
-[source,options="nowrap",subs=attributes+]
-----
-include::yaml_examples/cluster_view_message.yaml[]
-----
-endif::productized[]
-ifdef::productized[]
-. Verify that the nodes have received a clustered view. Do either of the following:
 
-** Retrieve the cluster view from the pod log files.
-+
-[source,options="nowrap",subs="attributes"]
-----
-include::cmd_examples/oc_logs_clusterview.adoc[]
-----
-+
 ** Retrieve the custom resource type for the {ispn_operator}.
 +
 [source,options="nowrap",subs=attributes+]
@@ -44,10 +20,10 @@ include::cmd_examples/oc_logs_clusterview.adoc[]
 include::cmd_examples/oc_get_ispn_yaml.adoc[]
 ----
 +
-The output of the preceding command contains the following message to indicate that the {brandname} nodes have received a clustered view:
+The {ispn_operator} responds with the following message to indicate that the
+{brandname} nodes have received a clustered view:
 +
 [source,options="nowrap",subs=attributes+]
 ----
 include::yaml_examples/cluster_view_message.yaml[]
 ----
-endif::productized[]
