ISPN-10554 aligning with Infinispan doc set

--- a/documentation/asciidoc/stories/assembly_cluster_credentials.adoc
+++ b/documentation/asciidoc/stories/assembly_cluster_credentials.adoc
@@ -12,7 +12,7 @@ ifdef::productized[]
 * An `oc` client in your `$PATH`.
 endif::productized[]
 
-include::topics/proc_get_cluster_credentials.adoc[leveloffset=+1]
+include::{topics}/proc_get_cluster_credentials.adoc[leveloffset=+1]
 
 // Restore the parent context.
 ifdef::parent-context[:context: {parent-context}]
