--- a/documentation/asciidoc/titles/stories.adoc
+++ b/documentation/asciidoc/titles/stories.adoc
@@ -1,7 +1,6 @@
-include::topics/con_infinispan_operator.adoc[]
-ifdef::productized[]
-include::topics/ref_tech_preview.adoc[]
+include::{stories}/assembly_operator_overview.adoc[leveloffset=+1]
+ifndef::productized[]
+include::{stories}/assembly_deploying_operator.adoc[leveloffset=+1]
 endif::productized[]
-//include::stories/assembly_deploying_operator.adoc[leveloffset=+1]
-include::stories/assembly_creating_clusters.adoc[leveloffset=+1]
-include::stories/assembly_cluster_credentials.adoc[leveloffset=+1]
+include::{stories}/assembly_creating_clusters.adoc[leveloffset=+1]
+include::{stories}/assembly_cluster_credentials.adoc[leveloffset=+1]
