--- a/documentation/asciidoc/stories/assembly_creating_clusters.adoc
+++ b/documentation/asciidoc/stories/assembly_creating_clusters.adoc
@@ -4,17 +4,17 @@
 
 You create {brandname} clusters from custom resource definitions.
 
-ifndef::productized[]
 .Prerequisites
+ifndef::productized[]
 Either install the {ispn_operator} from link:https://www.operatorhub.io/[OperatorHub.io] or link:#deploying_operator_manually[manually deploy it].
 endif::productized[]
-//ifdef::productized[]
-//link:#deploying_operator_manually[Manually deploy the {ispn_operator}].
-//endif::productized[]
+ifdef::productized[]
+Install the {ispn_operator} from the OperatorHub.
+endif::productized[]
 
-include::topics/proc_create_cluster_minimal.adoc[leveloffset=+1]
-include::topics/proc_create_cluster_auth.adoc[leveloffset=+1]
-include::topics/proc_verify_cluster.adoc[leveloffset=+1]
+include::{topics}/proc_create_cluster_minimal.adoc[leveloffset=+1]
+include::{topics}/proc_create_cluster_auth.adoc[leveloffset=+1]
+include::{topics}/proc_verify_cluster.adoc[leveloffset=+1]
 
 // Restore the parent context.
 ifdef::parent-context[:context: {parent-context}]
